Ads link baixar videos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="author" content="baixar musicas youtube alta qualidade, mp3 gratis, mp3 no celular, youtube no celular, youtube 320kbps, baixar musicas youtube programa">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script data-ad-client="ca-pub-8176714197903021" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Baixar musicas do YouTube - Conversor YouTube para MP3</title>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Raleway:400,700,900');
