--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script data-ad-client="ca-pub-8176714197903021" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Baixar musicas do YouTube - Conversor YouTube para MP3</title>
+    <link rel="shortcut icon" href="favicon.ico" />
     <style>
         @import url('https://fonts.googleapis.com/css?family=Raleway:400,700,900');
         /* Base styling */
